# scan-rs

./: Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.github/workflows/: build-and-test-macos14.yaml  build-and-test-ubuntu2404.yaml  fedora-41.yaml  macos-14.yaml
containers/: Containerfile  Containerfile.fedora41
docs/: layout.md
driver/: Cargo.toml
driver/src/: exit.rs  main.rs  scan.rs
impls/par_cpu_naive_dbl/: Cargo.toml
impls/par_cpu_naive_dbl/src/: lib.rs
impls/par_cpu_naive_dbl/tests/: test-scan.rs
impls/par_gpu_naive_dbl/: Cargo.toml
impls/par_gpu_naive_dbl/src/: lib.rs  shader.wgsl
impls/par_gpu_naive_dbl/tests/: test-scan.rs
impls/par_unimplemented/: Cargo.toml
impls/seq/: Cargo.toml
impls/seq/src/: lib.rs
impls/seq/tests/: test-scan.rs
impls/seq_naive/: Cargo.toml
impls/seq_naive/src/: lib.rs
impls/seq_naive/tests/: test-scan.rs
impls/seq_naive_dbl/: Cargo.toml
impls/seq_naive_dbl/src/: lib.rs
impls/seq_naive_dbl/tests/: test-scan.rs
impls/simd_naive_dbl/: Cargo.toml
impls/simd_naive_dbl/src/: lib.rs
impls/simd_naive_dbl/tests/: test-scan.rs
impls/simd_unimplemented/: Cargo.toml
impls/simd_unimplemented/src/: lib.rs
impls/unimplemented/: Cargo.toml
impls/unimplemented/src/: lib.rs
impls/unimplemented/tests/: test-scan.rs
scripts/: build-and-test-macos.sh  setup-macos.sh
src/: main.rs  scan.rs  support.rs
src/scan/: par_cpu_naive_dbl.rs  par_unimplemented.rs  seq.rs  seq_naive.rs  seq_naive_dbl.rs  simd_naive_dbl.rs  simd_unimplemented.rs  unimplemented.rs
test-scan/: Cargo.toml
test-scan/src/: lib.rs
tests/: test-scan.rs
