[package]
name = "scan-rs"
version = "0.1.0"
edition = "2024"
authors = ["Giordano Salvador <73959795+e3m3@users.noreply.github.com>"]
description = "Exclusive scan algorithms"
repository = "https://github.com/e3m3/scan-rs"
readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "scan"
path = "src/main.rs"

[dependencies]

[dev-dependencies]
